--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --font-pixelify-sans: var(--font-pixelify-sans);
+  --font-inter: var(--font-inter);
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
